@@ -8,6 +8,8 @@ from pypet.environment import Environment
 from pypet import pypetconstants
 import logging
 import os
+import time
+from scipy.stats import pearsonr
 
 from pypet.tests.testutils.ioutils import run_suite, make_temp_dir, make_trajectory_name, \
      parse_args, get_log_config
@@ -159,9 +161,6 @@ class MergeTest(TrajectoryComparator):
         self.trajs[1].f_get('Denied').f_set(15)
 
         merged_traj.f_merge(self.trajs[1])
-
-
-
 
     def test_merge_basic_within_same_file_only_adding_more_trials_copy_nodes(self):
         self.filenames = [make_temp_dir(os.path.join('experiments',
@@ -548,6 +547,8 @@ class TestMergeResultsSort(ResultSortTest):
 
     tags = 'integration', 'hdf5', 'environment', 'merge'
 
+
+
     def setUp(self):
         super(TestMergeResultsSort,self).setUp()
 
@@ -599,6 +600,7 @@ class TestMergeResultsSort(ResultSortTest):
         self.traj.f_load(load_results=pypetconstants.UPDATE_DATA)
         self.check_if_z_is_correct(self.traj)
 
+
     def test_merge_remove_duplicates(self):
 
         self.explore(self.traj)
@@ -628,6 +630,119 @@ class TestMergeResultsSort(ResultSortTest):
         self.explore_dict={'x':[0,1,2,3,4],'y':[1,1,2,2,42]}
         traj.f_explore(self.explore_dict)
 
+
+class TestConsecutiveMerges(TrajectoryComparator):
+
+    tags = 'integration', 'hdf5', 'environment', 'merge', 'consecutive_merge'
+
+    def check_if_z_is_correct(self,traj):
+        for x in range(len(traj)):
+            traj.v_idx=x
+
+            self.assertTrue(traj.crun.z==traj.x*traj.y,' z != x*y: %s != %s * %s' %
+                                                  (str(traj.crun.z),str(traj.x),str(traj.y)))
+        traj.v_idx=-1
+
+    def set_mode(self):
+        self.mode = 'LOCK'
+        self.multiproc = False
+        self.ncores = 1
+        self.use_pool=True
+        self.log_stdout=False
+        self.freeze_pool_input=False
+
+    def explore(self,traj):
+        self.explore_dict={'x':range(10),'y':range(10)}
+        traj.f_explore(self.explore_dict)
+
+    def setUp(self):
+        self.envs = []
+        self.trajs = []
+        self.set_mode()
+
+        self.filename = make_temp_dir(os.path.join('experiments','tests','HDF5','test.hdf5'))
+
+        self.trajname = make_trajectory_name(self)
+
+    def _make_env(self, idx):
+       return Environment(trajectory=self.trajname+str(idx),filename=self.filename,
+                          file_title=self.trajname,
+                          log_stdout=False,
+                          log_config=get_log_config(),
+                          multiproc=self.multiproc,
+                          wrap_mode=self.mode,
+                          ncores=self.ncores)
+
+    @staticmethod
+    def strictly_increasing(L):
+        return all(x<y for x, y in zip(L, L[1:]))
+
+    def test_consecutive_merges(self):
+
+        ntrajs = 41
+        for irun in range(ntrajs):
+            self.envs.append(self._make_env(irun))
+            self.trajs.append(self.envs[-1].v_traj)
+            self.trajs[-1].f_add_parameter('x',0)
+            self.trajs[-1].f_add_parameter('y',0)
+            self.explore(self.trajs[-1])
+
+        for irun in range(ntrajs):
+            self.envs[irun].f_run(multiply)
+
+        merge_traj = self.trajs[0]
+        merge_traj.f_load_skeleton()
+
+        timings = []
+        for irun in range(1, ntrajs):
+            start = time.time()
+            merge_traj.f_merge(self.trajs[irun], backup=False, consecutive_merge=True)
+            end = time.time()
+            delta = end -start
+            timings.append(delta)
+
+        # Test if there is no linear dependency for consecutive merges:
+        if self.strictly_increasing(timings) and len(timings) > 1:
+            raise ValueError('Timings %s are strictly increasing' % str(timings))
+        r, alpha = pearsonr(range(len(timings)), timings)
+        logging.error('R and Alpha of consecutive merge test %s' % str((r,alpha)))
+        if alpha < 0.01 and r > 0:
+            raise ValueError( 'R and Alpha of consecutive merge test %s\n' % str((r,alpha)),
+                'Timings %s are lineary increasing' % str(timings))
+
+        merge_traj.f_store()
+        merge_traj.f_load(load_data=2)
+        self.check_if_z_is_correct(merge_traj)
+
+
+    def test_merge_many(self):
+
+        ntrajs = 4
+        for irun in range(ntrajs):
+            self.envs.append(self._make_env(irun))
+            self.trajs.append(self.envs[-1].v_traj)
+            self.trajs[-1].f_add_parameter('x',0)
+            self.trajs[-1].f_add_parameter('y',0)
+            self.explore(self.trajs[-1])
+
+        for irun in range(ntrajs):
+            self.envs[irun].f_run(multiply)
+
+        merge_traj = self.trajs[0]
+
+        total_len = 0
+        for traj in self.trajs:
+            total_len += len(traj)
+        merge_traj.f_merge_many(self.trajs[1:])
+
+        merge_traj.f_load(load_data=2)
+        self.assertEqual(len(merge_traj), total_len)
+        self.check_if_z_is_correct(merge_traj)
+
+    def tearDown(self):
+        for env in self.envs:
+            env.f_disable_logging()
+        super(TestConsecutiveMerges, self).tearDown()
 
 if __name__ == '__main__':
     opt_args = parse_args()
