@@ -1530,14 +1530,14 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
                 param.f_unlock()
 
     def _check_if_both_have_same_parameters(self, other_trajectory,
-                                            ignore_data):
+                                            ignore_data, consecutive_merge):
         """ Checks if two trajectories live in the same space and can be merged. """
 
         if not isinstance(other_trajectory, Trajectory):
             raise TypeError('Can only merge trajectories, the other trajectory'
                             ' is of type `%s`.' % str(type(other_trajectory)))
 
-        if self._stored:
+        if self._stored and not consecutive_merge:
             self.f_load_skeleton()
         if other_trajectory._stored:
             other_trajectory.f_load_skeleton()
@@ -1640,11 +1640,44 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
     def _make_reversed_wildcards(self):
         """Creates a full mapping from all wildcard translations to the corresponding wildcards"""
         for wildcards, func in self._wildcard_functions.items():
-            for irun in range(-1, len(self)):
+            for irun in range(len(self._reversed_wildcards) - 1, len(self)):
                 translated_name = func(irun)
                 if not translated_name in self._reversed_wildcards:
                     self._reversed_wildcards[translated_name] = ([], wildcards)
                 self._reversed_wildcards[translated_name][0].append(irun)
+
+    @not_in_run
+    def f_merge_many(self, other_trajectories,
+                ignore_data=(),
+                move_data=False,
+                delete_other_trajectory=False,
+                keep_info=True,
+                keep_other_trajectory_info=True,
+                merge_config=True):
+        """Can be used to merge several `other_trajectories` into your current one.
+
+        Does NOT backup your date before the merge, please do this manually!
+
+        Parameters as for :func:`~pypet.trajectory.Trajectory.f_merge`.
+
+        """
+        other_length = len(other_trajectories)
+        self._logger.info('Merging %d trajectories into the current one.' % other_length)
+        self.f_load_skeleton()
+        for idx, other in enumerate(other_trajectories):
+            self.f_merge(other, ignore_data=ignore_data,
+                         move_data=move_data,
+                         delete_other_trajectory=delete_other_trajectory,
+                         keep_info=keep_info,
+                         keep_other_trajectory_info=keep_other_trajectory_info,
+                         merge_config=merge_config,
+                         backup=False,
+                         consecutive_merge=True)
+            self._logger.log(21,'Merged %d out of %d' % (idx + 1, other_length))
+        self._logger.info('Storing data to disk')
+        self._reversed_wildcards = {}
+        self.f_store()
+        self._logger.info('Finished final storage')
 
     @not_in_run
     @kwargs_api_change('backup_filename', 'backup')
@@ -1658,7 +1691,8 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
                 delete_other_trajectory=False,
                 keep_info=True,
                 keep_other_trajectory_info=True,
-                merge_config=True):
+                merge_config=True,
+                consecutive_merge=False):
         """Merges another trajectory into the current trajectory.
 
         Both trajectories must live in the same space. This means both need to have the same
@@ -1727,6 +1761,15 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
             in case you want to keep all the information. Setting of `keep_other_trajectory_info`
             is irrelevant in case `keep_info=False`.
 
+        :param consecutive_merge:
+            Can be set to `True` if you are about to merge several trajectories into the current
+            one within a loop to avoid quadratic complexity.
+            But remember to store your trajectory manually after
+            all merges. Also make sure that all parameters and derived parameters are available
+            in your current trajectory and load them before the consecutive merging.
+            Also avoid specifying a `trial_parameter` and set `backup=False`
+            to avoid quadratic complexity in case of consecutive merges.
+
         If you cannot directly merge trajectories within one HDF5 file, a slow merging process
         is used. Results are loaded, stored, and emptied again one after the other. Might take
         some time!
@@ -1737,13 +1780,22 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
         of single runs are copied, so you don't have to worry about these.
 
         """
+        if consecutive_merge and trial_parameter is not None:
+            self._logger.warning('If you do a consecutive merge and specify a trial parameter, '
+                                 'your merging will still suffer from quadratic time complexity!')
+        if consecutive_merge and backup:
+            self._logger.warning('If you do a consecutive merge and backup, '
+                                 'your merging will still suffer from quadratic time complexity!')
+
         # Keep the timestamp of the merge
         timestamp = time.time()
         original_ignore_data = set(ignore_data)
         ignore_data = original_ignore_data.copy()
 
+        old_len = len(self)
+
         # Check if trajectories can be merged
-        self._check_if_both_have_same_parameters(other_trajectory, ignore_data)
+        self._check_if_both_have_same_parameters(other_trajectory, ignore_data, consecutive_merge)
 
         # Create a full mapping set for renaming
         self._make_reversed_wildcards()
@@ -1768,9 +1820,6 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
         if len(used_runs) == 0:
             raise ValueError('Your merge discards all runs of the other trajectory, maybe you '
                              'try to merge a trajectory with itself?')
-
-
-
 
         # Dictionary containing the mappings between run names in the other trajectory
         # and their new names in the current trajectory
@@ -1805,7 +1854,8 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
         self._logger.info('Updating Trajectory information and changed parameters in storage')
         self._storage_service.store(pypetconstants.PREPARE_MERGE, self,
                                     trajectory_name=self.v_name,
-                                    changed_parameters=changed_parameters)
+                                    changed_parameters=changed_parameters,
+                                    old_length=old_len)
 
         try:
             # Merge the single run derived parameters and all results
@@ -1930,10 +1980,10 @@ class Trajectory(DerivedParameterGroup, ResultGroup, ParameterGroup, ConfigGroup
                                       comment='Comment of other trajectory')
 
         # Write out the merged data to disk
-        self._logger.info('Writing merged data to disk')
-        self.f_store(store_data=pypetconstants.STORE_DATA)
-
-        self._reversed_wildcards = {}
+        if not consecutive_merge:
+            self._logger.info('Writing merged data to disk')
+            self.f_store(store_data=pypetconstants.STORE_DATA)
+            self._reversed_wildcards = {}
         other_trajectory._reversed_wildcards = {}
 
         self._logger.info('Finished Merging!')
